--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -57,7 +57,8 @@ body {
     width: 100%;
     height: 100%;
     background: #2d0712c7;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: visible;
     justify-content: center;
     align-items: center;
 }
@@ -66,7 +67,7 @@ body {
     background: linear-gradient(135deg, #392140,#2D0712); /* Gradient from deep pink to lighter pink */
     color: #fff;
     width: 80%;
-    max-width: 800px;
+    max-width: 1000px;
     padding: 20px;
     border-radius: 10px;
     position: relative;
@@ -75,6 +76,7 @@ body {
     height: auto;
     max-height: 90vh; /* Prevents it from getting too tall */
     overflow-y: auto; /* Enables scrolling if content exceeds max-height */
+    overflow-x: visible;
 }
 
 /* Title and Links Container */
@@ -106,6 +108,7 @@ body {
 
 /* Close Button */
 .close {
+    background-color: #392140;
     position: absolute;
     color: #ffffff;
     top: 10px;
@@ -137,7 +140,7 @@ body {
     border-radius: 10px;
 }
 
-.button-close {
+button {
     background: #000;
     color: #fff;
     border: none;
@@ -147,6 +150,11 @@ body {
     border-radius: 5px;
 }
 
-.button-close:hover {
+button:hover {
     background: #444;
 }
+
+
+
+
+
