good enough added click away from modal + esc close functions as well as the button
this is what i want but i would have to restart sooo not right now: https://html-online.com/articles/simple-popup-box/
-
I want the button in the corner but if i add the div i need it breaks everything ;(

--- a/css/less/styleLess.less
+++ b/css/less/styleLess.less
@@ -29,7 +29,9 @@
     border-radius: 10px; 
     //background : @black;
     background-color: #c300ff;
-     left       : 80%;
+    //left       : 80%;
+    top: 10px;
+    right: 15px;
     // top        : 50%;
     margin-top : -@buttonSize/2;
     margin-left: -@buttonSize + (@buttonSize/2);
