--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -32,13 +32,13 @@ body {
 }
 
 /* Hover Effects */
-.project-box:hover {
-    background: rgba(255, 255, 255, 0.8);
+.projectPage-box:hover {
+    background: rgba(241, 140, 241, 0.717);
     color: #000;
     transform: scale(1.1);
 }
 
-.project-box:hover::before {
+.projectPage-box:hover::before {
     content: "";
     position: absolute;
     inset: 0;
@@ -77,6 +77,7 @@ body {
     max-height: 90vh; /* Prevents it from getting too tall */
     overflow-y: auto; /* Enables scrolling if content exceeds max-height */
     overflow-x: hidden;
+    /* overflow-inline:visible; */
 }
 
 /* Title and Links Container */
@@ -84,8 +85,7 @@ body {
     background: linear-gradient(135deg, #000000d9,#2D0712); 
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    
+    align-items: center; 
 }
 
 /* Links Container */
@@ -119,7 +119,7 @@ body {
     cursor: pointer;
 }
 
-.popupCloseButton {
+/* .popupCloseButton {
     background-color: #fff;
     border: 3px solid #999;
     border-radius: 50px;
@@ -135,7 +135,7 @@ body {
     width: 30px;
     height: 30px;
     text-align: center;
-}
+} */
 
 /* Close Button Styling */
 /* .close {
