Done this is my site (Need to add logo to main page but else its done)

--- a/css/style.css
+++ b/css/style.css
@@ -5934,6 +5934,7 @@ a.brand:focus {
   height: 100%;
   background-size: cover;
   background-position: center;
+  overflow: hidden;
 }
 
 .vertical-title {
