changed teh templete to include the easy to change feature css & JS files

--- a/MiniFeatures/Template/featurename.html
+++ b/MiniFeatures/Template/featurename.html
@@ -21,6 +21,8 @@
     <link href="../../css/style.css" rel="stylesheet" media="screen">
     <link href="../../css/mystyles.css" rel="stylesheet">
 
+    <link href="featurename.css" rel="stylesheet">
+
     
 </head>
 
@@ -270,6 +272,8 @@
     <!-- Scripts -->
     <script src="../../js/scripts.js"></script>
     <script src="../../js/mousefollowhoneycomb.js"></script>
+
+    <script src="featurename.js"></script>
 
 </body>
 
